--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="nueva_denuncia">Nueva Denuncia</string>
+    <string name="titulo_de_denuncia">Titulo de denuncia</string>
+    <string name="descripci_n">Descripción</string>
+    <string name="ubicaci_n">Ubicación</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
